# desafio-fpf

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  pytest.ini  requirements.txt
notebooks/: evaluate_model.py  merge_datasets.py  predict_model.py  train_merged_dataset.py  validate_model.py  verify_dataset.py
src/: main.py
src/api/: celery_config.py  celery_preload.py
src/api/controllers/: image_controller.py
src/api/middleware/: __init__.py  response_formatter.py
src/api/routes/: image_routes.py
src/api/services/: image_service.py  redis_cleaner.py  result_storage.py
src/api/tasks/: image_processing_tasks.py
src/core/: __init__.py  config.py  logging_config.py  vision_processor.py
src/core/detection/: yolo_detector.py
src/core/processing/: image_preprocessor.py  qr_decoder.py  vision_processor.py
src/core/utils/: coordinate_utils.py  helpers.py  qr_utils.py
src/db/: create_tables.py  database.py  models.py
src/db/migrations/: env.py
src/db/migrations/versions/: 001_create_vision_tables.py
src/models/: __init__.py  api.py  base.py  tasks.py  vision.py
src/static/: index.html
src/static/css/: custom.css
src/static/js/: app.js
tests/: conftest.py  fixtures.py
tests/unit/: test_api_routes.py  test_coordinate_utils.py  test_helpers.py  test_image_controller.py  test_image_preprocessor.py  test_image_processing_tasks.py  test_image_service.py  test_qr_decoder.py  test_response_formatter.py  test_result_storage.py  test_vision_processor.py  test_yolo_detector.py
